2009-10-18  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Timothy Hatcher.

        Web Inspector: Properties on Arrays and NodeLists are not logged correctly.

        https://bugs.webkit.org/show_bug.cgi?id=30485

WebCore:
        * inspector/front-end/ConsoleView.js:
        (WebInspector.ConsoleView.prototype._formatarray):
        (WebInspector.ConsoleView.prototype._printArray):

LayoutTests:
        * inspector/console-format-expected.txt:
        * inspector/console-format.html:


Canonical link: https://commits.webkit.org/41216@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49762 268f45cc-cd09-0410-ab3c-d52691b4dbfc